src/App.css
.app {
  background-color: #eee;
  min-height: 100vh;
  width: 100vw;
}

.search-bar-container {
  padding-top: 7vh;
  padding-bottom: 7vh;
  width: 60%;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-width: 200px;
}

button {
  box-shadow: 0px 0px 8px #ddd;
}

input:focus, button:focus, button:focus-visible {
  outline: 6px green;
}

